--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-
+<-- musialem cos zpullowac -->
   <nav>
     <div class="nav-container">
       <div class="logo">🌌 Aircode</div>
