--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     <a href="https://github.com/aircodes1" target="_blank" class="contact-btn github">
       <i class="fab fa-github"></i> GitHub
     </a>
+    <a href="https://www.buymeacoffee.com/aircode" target="_blank" class="contact-btn coffee">
+    <i class="fas fa-mug-hot"></i> Buy Me a Coffee
+    </a>
   </div>
 </section>
 
