--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <a href="https://www.spigotmc.org/resources/aircode-sety.125205/" target="_blank">Zobacz na SpigotMC</a>
       </div>
       <div class="project">
-        <h3>🗺️ MapGenerator</h3>
-        <p>Własny generator map PvP z obsługą skrzynek, spawnów i regionów.</p>
+        <h3>😶‍🌫️ AIRCODE-INCOGNITO</h3>
+        <p>Plugin który ukryje cię przed popularnością! (wzorowany na anarchia.gg)</p>
         <span>Wkrótce</span>
       </div>
       <div class="project">
