--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <a href="https://www.buymeacoffee.com/aircode" target="_blank" class="contact-btn coffee">
     <i class="fas fa-mug-hot"></i> Buy Me a Coffee
     </a>
+    <a href="https://www.youtube.com/@aircode_s1" target="_blank" class="contact-btn youtube">
+  <i class="fab fa-youtube"></i> YouTube
+    </a>
+    
   </div>
 </section>
 
