--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@
     <p>&copy; 2025 Aircode • Made with <span style="color:red;">❤</span> by graczy dla graczy</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
